--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
       href="https://unpkg.com/@picocss/pico@latest/css/pico.min.css"
     />
     <link rel="stylesheet" href="/css/custom.css" />
+    <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
+    <title>Endala: A Stargaze NFT project</title>
+    <meta property="og:title" content="Endala: A Stargaze NFT project" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="http://endala.xyz" />
+    <meta property="og:image" content="http://endala.xyz/images/hero.jpg" />
+    <meta property="og:description" content="Generative art project using p5js" />
+
   </head>
   <body>
     <div class="hero" data-theme="dark">
