Add testnet instructions

--- a/index.html
+++ b/index.html
@@ -37,9 +37,13 @@
           </h2>
           <progress id="mint-progress-bar" value="" max=""></progress>
         </div>
+        <p>
+            For testnet, please accept the Keplr request to add the testnet. Then ensure you fund your testnet wallet from the <a href="https://discord.com/channels/755548171941445642/940653213022031912" target="_blank">faucet</a>.
+        </p>
       </header>
     </div>
     <main class="container">
+        
       <div id="endala-img-wrap">
         <h2>Your new Endala has arrived!</h2>
         <img id="endala-img" src="" />
