--- a/index.html
+++ b/index.html
@@ -6,14 +6,16 @@
       href="https://unpkg.com/@picocss/pico@latest/css/pico.min.css"
     />
     <link rel="stylesheet" href="/css/custom.css" />
-    <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png" />
     <title>Endala: A Stargaze NFT project</title>
     <meta property="og:title" content="Endala: A Stargaze NFT project" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://endala.xyz" />
     <meta property="og:image" content="http://endala.xyz/images/hero.jpg" />
-    <meta property="og:description" content="Generative art project using p5js" />
-
+    <meta
+      property="og:description"
+      content="Generative art project using p5js"
+    />
   </head>
   <body>
     <div class="hero" data-theme="dark">
@@ -31,18 +33,25 @@
         </div>
         <div id="mint-progress-wrap" class="container">
           <div class="progress-header">
-              Endalas Minted:
-            <span id="mint-progress-count"></span
-            >/<span id="mint-progress-total"></span>          
-          <progress id="mint-progress-bar" value="" max=""></progress>
+            Endalas Minted:
+            <span id="mint-progress-count"></span>/<span
+              id="mint-progress-total"
+            ></span>
+            <progress id="mint-progress-bar" value="" max=""></progress>
+          </div>
         </div>
         <p>
-            For testnet, please accept the Keplr request to add the testnet. Then ensure you fund your testnet wallet from the <a href="https://discord.com/channels/755548171941445642/940653213022031912" target="_blank">faucet</a>.
+          For testnet, please accept the Keplr request to add the testnet. Then
+          ensure you fund your testnet wallet from the
+          <a
+            href="https://discord.com/channels/755548171941445642/940653213022031912"
+            target="_blank"
+            >faucet</a
+          >.
         </p>
       </header>
     </div>
     <main class="container">
-        
       <div id="endala-img-wrap">
         <h2>Your new Endala has arrived!</h2>
         <img id="endala-img" src="" />
